--- a/package.json
+++ b/package.json
@@ -1,94 +1,93 @@
 {
-	"name": "AnupBot",
-	"version": "16.2.23",
-	"description": "A simple Facebook Messenger Bot made by Anup Kumar.",
-	"main": "anup.js",
+	"name": "SalmanBot",
+	"version": "9.0.1",
+	"description": "A simple Facebook Messenger Bot made by Salman Ador",
+	"main": "salman.js",
 	"scripts": {
-		"start": "node index",
+		"start": "node index.js",
 		"login": "node login",
 		"test": "node --trace-warnings --use_strict --async-stack-traces mirai"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Anupx0/Anupbot"
+		"url": "https://github.com/Salman583/Salmanbot"
 	},
 	"keywords": [
 		"bot",
 		"facebook",
-		"projectanupbot",
-		"messenger"
+		"projectmirai",
+		"messenger",
+		"mirai",
+		"catalizcs",
+		"spermlord",
+		"miraipr0ject"
 	],
 	"author": "Anup Kumar",
 	"license": "GPL-3.0",
 	"bugs": {
-		"url": "https://github.com/Anupx0/Anupbot/issues"
+		"url": "https://github.com/Salman583/Salmanbot/issues"
 	},
-	"homepage": "https://github.com/Anupx0/Anupbot",
+	"homepage": "https://github.com/Salman583/Salmanbot",
 	"dependencies": {
 		"@miraipr0ject/assets": "",
-		"@replit/database": "^2.0.2",
+		"@replit/database": "^2.0.1",
 		"@supercharge/strings": "^1.28.0",
-		"akaneko": "^5.2.3",
-		"axios": "^0.26.1",
+		"akaneko": "^5.2.2",
+		"anup-yogesh": "^1.0.1",
+		"axios": "^1.2.2",
 		"body-parser": "",
-		"brainly-fork-api": "0.0.46",
 		"caesar-salad": "",
-		"canvagif": "^0.1.14",
-		"canvas": "^2.9.3",
+		"canvas": "^2.11.0",
 		"chalk": "^4.1.2",
-		"cheerio": "^0.22.0",
+		"cheerio": "",
 		"child_process": "^1.0.2",
 		"colors": "^1.4.0",
 		"cron": "^2.1.0",
+		"cronosjs": "^1.7.1",
 		"crypto": "",
 		"discord-chatbot": "^2.1.0",
+		"discord-image-generation": "^1.4.25",
 		"eval": "^0.1.8",
-		"express": "^4.18.2",
 		"extract-zip": "",
-		"fb-chat-api": "^10.4.17",
-		"fca-aliiya-remake": "^31.40.11",
+		"fb-chat-api": "^10.4.1",
+		"fca-aliya-anup": "^1.0.5",
+		"fca-carla": "^20.0.10",
 		"figlet": "",
-		"fs-extra": "^10.1.0",
-		"googlethis": "^1.6.0",
-		"http": "0.0.1-security",
-		"idioms": "0.0.2",
-		"imagemaker.js": "^2.0.4",
+		"fs-extra": "^11.1.0",
+		"helyt": "^1.3.16",
 		"jimp": "",
 		"knights-canvas": "^1.3.7-a",
 		"lyrics-finder": "^21.7.0",
 		"mal-scraper": "^2.11.4",
 		"minimist": "",
-		"moment-timezone": "^0.5.37",
-		"movie-info": "^2.0.5",
+		"moment-timezone": "^0.5.34",
 		"ms": "",
 		"nhentai-api": "^3.4.3",
 		"node-cron": "^3.0.2",
 		"node-opus": "^0.3.3",
 		"node-schedule-tz": "^1.2.1-4",
 		"npmlog": "",
+		"openai": "^3.1.0",
 		"opusscript": "0.0.8",
 		"pastebin-api": "^5.1.5",
 		"path": "",
 		"pidusage": "^3.0.0",
-		"ping-monitor": "^0.6.2",
-		"random-cat-img": "^1.0.4",
+		"pm2": "^5.2.0",
+		"querystring": "^0.2.1",
 		"readline": "",
 		"request": "^2.88.2",
-		"requests": "^0.3.0",
-		"semver": "^7.3.7",
-		"sequelize": "^6.21.4",
+		"semver": "^7.3.5",
+		"sequelize": "^6.17.0",
 		"simple-youtube-api": "^5.2.1",
-		"sqlite3": "^5.1.1",
+		"sqlite3": "^5.0.11",
 		"string-similarity": "",
-		"tiktok-scraper": "^1.4.36",
 		"to": "^0.2.9",
 		"totp-generator": "",
 		"vtuber-wiki": "^1.1.5",
-		"w5-textmaker": "^1.0.8",
 		"wikijs": "^6.3.3",
 		"youtube-search-api": "^1.1.0",
 		"youtubei.js": "^1.4.5",
-		"ytdl-core": "^4.11.2",
+		"ytdl-core": "^4.11.0",
 		"zalgo": "0.0.1"
 	}
 }
